<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:text="@string/asl_recognition"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:id="@+id/combine_letters_button"
        android:text="@string/start"
        android:textSize="23sp"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:text="@string/final_project_comp1682"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>