<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <org.opencv.android.JavaCameraView
        android:id="@+id/frame_Surface"
        android:layout_width="match_parent"
        android:layout_height="409dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/top_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="top"
        android:background="@color/black"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/combine_letters_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:hint="@string/added_letters_will_appear_here"
            android:scrollbars="vertical"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottom_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom"
        android:background="@color/black"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/add_text_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/add" />

        <Button
            android:id="@+id/space_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/space"
            android:textSize="21sp" />

        <Button
            android:id="@+id/backspace_button"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="50dp"
            android:gravity="bottom|center"
            android:text="@string/backspace"
            android:textSize="30sp" />

    </LinearLayout>

</FrameLayout>